Automated_dep_CI_Demo/src/objects/Orders__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_To_Name__c</fullName>
        <label>Additional To Name</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Items__c</fullName>
        <label>Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quote_To_Name__c</fullName>
        <label>Quote  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling__c</fullName>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>